Left Menu: fixed height with scrollbar styling on webkit(/blink)

--- a/client/scss/components/_left_menu.scss
+++ b/client/scss/components/_left_menu.scss
@@ -1,9 +1,28 @@
 $menu-background: lighten($primary-color, 47%);
 $active-border-width: 8px;
+$scrollbar-color: rgba(0, 0, 0, .3);
 
 #side-menu-container {
   background: linear-gradient(90deg, $menu-background 21rem, $white 21rem);
+  height: calc(100vh - 50px);
+  left: 0;
+  margin-top: 50px;
+  overflow-y: auto;
   padding-left: 0;
+  position: fixed;
+  top: 0;
+
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $scrollbar-color;
+  }
 }
 
 #side-menu {
